--- a/templates/sim/results.html
+++ b/templates/sim/results.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Симулятор определения компетенций</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-Ваши очки:
+<div class="container">
+    <h3>Ваши очки:</h3>
 
-{% for result in results %}
-    {{ result.param }} = {{ result.value }}
-{% endfor %}
-<br>
-<a href="{% url 'sim:base' %}" role="button">Пройти заново</a>
+    {% for result in results %}
+        {{ result.param }} = {{ result.value }}
+        <br>
+    {% endfor %}
+    <br>
+    <a href="{% url 'sim:base' %}" role="button">Пройти заново</a>
+</div>
 </body>
 </html>
