--- a/templates/sim/question.html
+++ b/templates/sim/question.html
@@ -29,7 +29,9 @@
                 </div>
             </label>
         {% endfor %}
-        <input type="submit">
+        <button type="submit" class="btn btn-primary labelText">
+            Отправить
+        </button>
     </form>
 </div>
 </body>
