--- a/templates/sim/question.html
+++ b/templates/sim/question.html
@@ -31,6 +31,12 @@
                         </div>
                     </label>
                 {% endfor %}
+                Ваши очки:
+                <br>
+                {% for result in results %}
+                    {{ result.param }} = {{ result.value }}
+                    <br>
+                {% endfor %}
                 <br>
                 <br>
                 <button type="submit" class="btn btn-primary labelText">
