fill db, add prob

--- a/templates/sim/points.html
+++ b/templates/sim/points.html
@@ -1,4 +1,4 @@
-Событие : {{ option.name }}
+{{ option.name }}  -  {{ prob }}%
 <br>
 {% for param, value in results.items %}
     {{ param }} : {{ value.0 }} ({{ value.1 }})
